# Flipper

./: Cargo.toml  README.md
flipper_client/: Cargo.toml
flipper_client/src/: app.rs  lib.rs  main.rs  message.rs  protocol.rs  services.rs
flipper_core/: Cargo.toml
flipper_core/src/: codec.rs  lib.rs  message.rs  protocol.rs  screen.rs  service.rs  transport.rs  utils.rs
flipper_server/: Cargo.toml
flipper_server/src/: main.rs  service.rs
src/: codec.rs  main.rs  message.rs  protocol.rs  screen.rs  service.rs  transport.rs  utils.rs
