[package]
name = "flipper_client"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
flipper_core = {path="../flipper_core"}

eframe = { version = "0.19.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] } 
epaint = "0.19.0"
egui_extras = {version="0.19.0", features = ["image"] }
tokio = {version = "1.21.1", features=["full"]}
tokio-util = "0.7.3"
bytes = "1.2.1"
anyhow = "1.0.65"
flume = "0.10.14"



# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"


[profile.release]
opt-level = 2 # fast and small wasm


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/egui" }
# eframe = { path = "../egui/eframe" }
