[package]
name = "flipper_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
anyhow = "1.0.65"
bytes = "1.2.1"
flate2 = { version = "1.0.24", features = ["zlib-ng"], default-features = false }
scrap = "0.5.0"
tokio = {version = "1.21.1", features = ["full"]}
tokio-util = {version = "0.7.4", features =["full"]}
tracing = "0.1.36"
tokio-stream = "0.1.10"
futures-util = { version = "0.3", features = ["default", "sink"] }